# drift

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  research_analysis.md
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  db.py  events.py
backend/app/agents/: base_agent.py  fact_checker.py  target.py
backend/app/agents/adversaries/: authority_spoofing.py  base_adversary.py  camel_adversary.py  concept_creep.py  context_butcher.py  coordinator.py  echo_chamber.py  gaslighting.py  gish_gallop.py  incremental_commit.py  oasis_channel.py  persona_break.py  temporal_sleight.py
backend/app/ingestion/: bootstrap.py  loader.py
backend/app/reporting/: heatmap.py  metrics.py  report.py
backend/app/routes/: compare.py  ingestion.py  report.py  simulation.py
backend/app/simulation/: runner.py  state.py
backend/scripts/: run_pilot.py
benchmarks/: generate_plots.py
benchmarks/GPT-4o/: drift_report_2026-05-16.md  drift_transcript_2026-05-16.md
benchmarks/GPT-4o-mini/: drift_report_2026-05-16.md  drift_transcript_2026-05-16.md
benchmarks/Gemini 2.5 Flash/: drift_report_2026-05-16 copy.md  drift_report_2026-05-16.md  drift_transcript_2026-05-16 copy.md  drift_transcript_2026-05-16.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  (+1 more)
seeds/: climate_science.txt  crispr_cas9.txt  cryptography.txt  evolutionary_biology.txt  macroeconomics.txt  neuroscience_memory.txt  quantum_computing.txt  sample_neuroscience.txt
(+37 files in other folders)
