[project]
name = "drift-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.3",
    "flask-cors>=4.0.1",
    "openai>=1.30.0",
    "zep-cloud==3.13.0",
    "camel-ai[oasis]==0.2.5",
    "langgraph>=0.1.0",
    "pydantic>=2.7.0",
    "pymupdf>=1.24.0",
    "chardet>=5.2.0",
    "sqlite-utils>=3.36.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.1",
    "numpy>=1.26.0",
    "tiktoken>=0.7.0",
    "pillow>=12.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
